--- a/public/src/styles/icons/_variables.scss
+++ b/public/src/styles/icons/_variables.scss
@@ -6,3 +6,4 @@ $icon-megaphone: "\e904";
 $icon-browser: "\e903";
 $icon-network: "\e905";
 $icon-pie-chart: "\e99a";
+$icon-dots-three-vertical: "\e906";
