--- a/public/src/styles/inputs/_variables.scss
+++ b/public/src/styles/inputs/_variables.scss
@@ -1,4 +1,4 @@
 $color: #d4d6db;
-$background-color: #4C5C8A;
+$background-color: #8494AC;
 $focus-background-color: #8494AC;
 $placeholder-color: white;
