--- a/public/src/styles/login/_variables.scss
+++ b/public/src/styles/login/_variables.scss
@@ -3,3 +3,4 @@ $title-color: white;
 $headline-background-color: #ff6767;
 $panel-background-color: #282639;
 $label-color: white;
+$invalid-color: #d92550;
