--- a/public/src/styles/main.scss
+++ b/public/src/styles/main.scss
@@ -13,6 +13,7 @@
 @use 'register-form';
 @use 'reset-list';
 @use 'susanoo-functions';
+@use 'symfony-commands';
 @use 'section';
 @use "tables";
 @use 'users';
