--- a/public/src/styles/susanoo-functions/_styles.scss
+++ b/public/src/styles/susanoo-functions/_styles.scss
@@ -23,6 +23,7 @@ $rem-base: 16px;
 $breakpoints: (
         small: rem-calc(0),
         medium: rem-calc(640),
+        large-s: rem-calc(840),
         large: rem-calc(1200),
         xlarge: rem-calc(1440),
         xxlarge: rem-calc(1920),
