--- a/templates/admin/twigBlocks/section-users.html.twig
+++ b/templates/admin/twigBlocks/section-users.html.twig
@@ -8,57 +8,25 @@
                 <tr>
                     <th>#</th>
                     <th>Name</th>
+                    <th>E-mail</th>
                     <th>Level</th>
                     <th>Created</th>
                     <th>Actions</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <td>333</td>
-                    <td>Dawid Ol</td>
-                    <td>54</td>
-                    <td>28.04.21</td>
-                    <td>
-                        <button class="button">Details</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>333</td>
-                    <td>Dawid Ol</td>
-                    <td>54</td>
-                    <td>28.04.21</td>
-                    <td>
-                        <button class="button">Details</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>333</td>
-                    <td>Dawid Ol</td>
-                    <td>54</td>
-                    <td>28.04.21</td>
-                    <td>
-                        <button class="button">Details</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>333</td>
-                    <td>Dawid Ol</td>
-                    <td>54</td>
-                    <td>28.04.21</td>
-                    <td>
-                        <button class="button">Details</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>333</td>
-                    <td>Dawid Ol</td>
-                    <td>54</td>
-                    <td>28.04.21</td>
-                    <td>
-                        <button class="button">Details</button>
-                    </td>
-                </tr>
+                {% for user in users %}
+                    <tr>
+                        <td>{{ user.id }}</td>
+                        <td>{{ user.name }} {{ user.lastname }}</td>
+                        <td>{{ user.email }}</td>
+                        <td></td>
+                        <td>{{ user.createdat|date('d-m-Y') }}</td>
+                        <td>
+                            <button class="button">Details</button>
+                        </td>
+                    </tr>
+                {% endfor %}
                 </tbody>
             </table>
         </div>
