Add generic logic to CMS, Removed private js classes, clean migrations

--- a/templates/admin/twigBlocks/section-symfony-commands.html.twig
+++ b/templates/admin/twigBlocks/section-symfony-commands.html.twig
@@ -10,5 +10,11 @@
             <div>php bin/console doctrine:migrations:diff = Generate the migration file</div>
             <div>php bin/console doctrine:migrations:migrate = Migrate to Database</div>
         </div>
+        <h3 class="h4 headline-inner">Tests</h3>
+        <div>
+            <div>php bin/console make:unit-test</div>
+            <div>php ./bin/phpunit</div>
+            <div>php bin/console make:functional-test</div>
+        </div>
     </div>
 </section>
